--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <button id="deletarTudo">Limpar tudo</button>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
