atualização dos módulos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </form>
 
     <h2> Lista de Alunos </h2>
-    <ul id="listaAlunos"></ul>
+    <ul id="lista"></ul>
 
     <button id="deletarTudo">Limpar tudo</button>
 
