--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Cadastro de alunos</title>
+    <title>Cadastro de alunoss</title>
 </head>
 <body>
     
