criação de arquivos de modularização dom e utils

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Cadastro de alunoss</title>
+    <title>Cadastro de alunos</title>
 </head>
 <body>
     
@@ -19,7 +19,7 @@
 
     <button id="deletarTudo">Limpar tudo</button>
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 
 </body>
 </html>
