campo de filtro

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <button type="submit">Cadastrar</button>
     </form>
 
+    <h4>Filtrar: <input id="filtrar" placeholder="Digite o nome que procura"></h4>
+
     <h2> Lista de Alunos </h2>
+    
     <ul id="lista"></ul>
 
     <button id="deletarTudo">Limpar tudo</button>
